--- a/itis3135/calculator_fcc.html
+++ b/itis3135/calculator_fcc.html
@@ -26,11 +26,16 @@
                 <a href="forms.html">HTML Forms</a> |
                 <a href="contract.html">Contract</a> |
                 <a href="website_evaluations.html">Website Evaluations</a> |
-                <a href="stuff/iRonsid3 gඞmEs.htm">CRAPPY Webpage</a> |
                 <a href="firstscripts.html">First Scripts</a> |
                 <a href="polygons.html">Polygons</a> |
                 <a href="calculator_try.html">Calculator_Try</a> |
-                Calculator_FCC
+                Calculator_FCC |
+                <a href="arrays.html">Arrays</a> |
+                <a href="slideshow.html">Slideshow</a>
+            </nav>
+            <nav>
+                <a href="stuff/iRonsid3 gඞmEs.htm">CRAPPY Webpage</a> |
+                <a href="Accessibility/hernandez-activity_accessibility.html">Accessibility</a>
                 
             </nav>
             <h1>ITIS-3155-091 - Miguel</h1>
@@ -38,7 +43,7 @@
     </div>
     <main>
         <h2>HTML Forms - EX. Activity #07 - Walk Thru A Calculator Build</h2>
-        <h3 class="calculator">I have completed <a href="Calculator_Try">Calculator_Try</a></h3>
+        <h3 class="calculator">I have completed <a href="calculator_try.html">Calculator_Try</a></h3>
     </main>
     <footer>
         <a href="https://validator.w3.org/check?uri=referer" target="_blank">
