--- a/itis3135/website_evaluations.html
+++ b/itis3135/website_evaluations.html
@@ -24,9 +24,17 @@
                 <a href="tables.html">HTML Tables</a> |
                 <a href="forms.html">HTML Forms</a> |
                 <a href="contract.html">Contract</a> |
-                Website Evaluations |
+                Website Evaluations |  
+                <a href="firstscripts.html">First Scripts</a> |
+                <a href="polygons.html">Polygons</a> |
+                <a href="calculator_try.html">Calculator_Try</a> |
+                <a href="calculator_fcc.html">Calculator_FCC</a> |
+                <a href="arrays.html">Arrays</a> |
+                <a href="slideshow.html">Slideshow</a>
+            </nav>
+            <nav>
                 <a href="stuff/iRonsid3 gඞmEs.htm">CRAPPY Webpage</a> |
-                <a href="firstscripts.html">First Scripts</a>
+                <a href="Accessibility/hernandez-activity_accessibility.html">Accessibility</a>
             </nav>
             <h1>ITIS-3155-091 - Miguel</h1>
         </header>
