--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -25,8 +25,16 @@
                 <a href="forms.html">HTML Forms</a> |
                 <a href="contract.html">Contract</a> |
                 <a href="website_evaluations.html">Website Evaluations</a> |
+                <a href="firstscripts.html">First Scripts</a> |
+                <a href="polygons.html">Polygons</a> |
+                <a href="calculator_try.html">Calculator_Try</a> |
+                <a href="calculator_fcc.html">Calculator_FCC</a> |
+                <a href="arrays.html">Arrays</a> |
+                <a href="slideshow.html">Slideshow</a>
+            </nav>
+            <nav>
                 <a href="stuff/iRonsid3 gඞmEs.htm">CRAPPY Webpage</a> |
-                <a href="firstscripts.html">First Scripts</a>
+                <a href="Accessibility/hernandez-activity_accessibility.html">Accessibility</a>
             </nav>
         </header>
     <main>
