--- a/itis3135/polygons.html
+++ b/itis3135/polygons.html
@@ -26,9 +26,17 @@
                 <a href="forms.html">HTML Forms</a> |
                 <a href="contract.html">Contract</a> |
                 <a href="website_evaluations.html">Website Evaluations</a> |
-                <a href="stuff/iRonsid3 gඞmEs.htm">CRAPPY Webpage</a> |
+
                 <a href="firstscripts.html">First Scripts</a> |
-                Polygons
+                Polygons |
+                <a href="calculator_try.html">Calculator_Try</a> |
+                <a href="calculator_fcc.html">Calculator_FCC</a> |
+                <a href="arrays.html">Arrays</a> |
+                <a href="slideshow.html">Slideshow</a>
+            </nav>
+            <nav>
+                <a href="stuff/iRonsid3 gඞmEs.htm">CRAPPY Webpage</a> |
+                <a href="Accessibility/hernandez-activity_accessibility.html">Accessibility</a>
             </nav>
             <h1>ITIS-3155-091 - Miguel</h1>
         </header>
