--- a/itis3135/slideshow.html
+++ b/itis3135/slideshow.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Miguel Hernandez | Magic Horse's | Calculator</title>
+    <title>Miguel Hernandez | Magic Horse's | Slideshow</title>
     <!-- GOOGLE MATERIAL ICONS - https://developers.google.com/fonts/docs/material_icons-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- JQuery 3.6.1 FROM GOOGLE CDN - https://developers.google.com/speed/libraries-->
@@ -13,6 +13,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300&display=swap" rel="stylesheet">
     <!-- Style Sheet -->
     <link rel="stylesheet" href="styles/default.css">
+    <!-- Scripts -->
+    <script src="scripts/slideshow.js"></script>
 </head>
 
 <body>
@@ -23,13 +25,13 @@
                 <a href="tables.html">HTML Tables</a> |
                 <a href="forms.html">HTML Forms</a> |
                 <a href="contract.html">Contract</a> |
-                <a href="website_evaluations.html">Website Evaluations</a> |        
+                <a href="website_evaluations.html">Website Evaluations</a> |
                 <a href="firstscripts.html">First Scripts</a> |
                 <a href="polygons.html">Polygons</a> |
-                Calculator_Try |
+                <a href="calculator_try.html">Calculator_Try</a> |
                 <a href="calculator_fcc.html">Calculator_FCC</a> |
                 <a href="arrays.html">Arrays</a> |
-                <a href="slideshow.html">Slideshow</a>
+                Slideshow
             </nav>
             <nav>
                 <a href="stuff/iRonsid3 gඞmEs.htm">CRAPPY Webpage</a> |
@@ -39,36 +41,16 @@
         </header>
     </div>
     <main>
-        <h2>HTML Forms - EX. Activity #07 - Walk Thru A Calculator Build</h2>
+        <h2>Slideshow - EX. Activity #09 - Slideshow</h2>
 
-        <section>
-            <div class="container">
-                <div id="display"></div>
-                <div class="buttons">
-                    <div class="button">C</div>
-                    <div class="button">/</div>
-                    <div class="button">*</div>
-                    <div class="button">&larr;</div>
-                    <div class="button">7</div>
-                    <div class="button">8</div>
-                    <div class="button">9</div>
-                    <div class="button">-</div>
-                    <div class="button">4</div>
-                    <div class="button">5</div>
-                    <div class="button">6</div>
-                    <div class="button">+</div>
-                    <div class="button">1</div>
-                    <div class="button">2</div>
-                    <div class="button">3</div>
-                    <div class="button">.</div>
-                    <div class="button">(</div>
-                    <div class="button">0</div>
-                    <div class="button">)</div>
-                    <div id="equal" class="button">=</div>
-                </div>
-            </div>
-        </section>
-
+        <div class="slideshow">
+            <img class="picture" src="images/starwars1.jpg" />
+            <img class="picture" src="images/starwars2.jpg" />
+            <img class="picture" src="images/starwars3.jpg" />
+            <img class="picture" src="images/starwars4.jpg" />
+            <img class="picture" src="images/starwars5.jpg" />
+            <img class="picture" src="images/starwars6.jpg" />
+        </div>
     </main>
     <footer>
         <a href="https://validator.w3.org/check?uri=referer" target="_blank">
@@ -82,8 +64,19 @@
         </a>
         Copyright <a href="hernandezsyndicate/index.html">Hernandez Syndicate</a> 2023 - All Rights Reserved
     </footer>
-    <!-- Scripts -->
-    <script src="scripts/calculator_try.js"></script>
+
+    <!-- HTML Include function call & jQuery console log write -->
+    <script>
+        // this runs the HTMLInclude function to replace the header and footer content
+        window.addEventListener('load', (event) => {
+            console.log('page is fully loaded... doing HTMLInclude replacements');
+            HTMLInclude();
+        });
+        // jQuery console write to confirm jQuery is loaded
+        $(document).ready(function () {
+            console.log("jQuery version: " + $.fn.jquery + " loaded.");
+        });
+    </script>
 </body>
 
 </html>
