--- a/itis3135/forms.html
+++ b/itis3135/forms.html
@@ -20,6 +20,7 @@
         <header>
             <nav>
                 <a href="index.html">Home</a> |
+                <a href="introduction.html">Introduction</a> |
                 <a href="tables.html">HTML Tables</a> |
                 HTML Forms |
                 <a href="contract.html">Contract</a> |
@@ -31,9 +32,17 @@
                 <a href="arrays.html">Arrays</a> |
                 <a href="slideshow.html">Slideshow</a>
             </nav>
+            <hr class="hr">
             <nav>
                 <a href="stuff/iRonsid3 gඞmEs.htm">CRAPPY Webpage</a> |
-                <a href="Accessibility/hernandez-activity_accessibility.html">Accessibility</a>
+                <a href="Accessibility/hernandez-activity_accessibility.html">Accessibility</a> |
+                <a href="midterm/hobby.html">Hobby</a> |
+                <a href="Activity11/Hernandez-Activity11.html">Accordion</a> |
+                <a href="Activity12/Hernandez-Activity12.html">Carousel Application</a> |
+                <a href="Activity13/Hernandez-Activity13.html">XML to JSON</a> |
+                <a href="Activity14/Hernandez-Activity14.html">Load Speaker Data</a> |
+                <a href="Activity15/Hernandez-Activity15.html">Expanded JSON File</a>
+                
             </nav>
             <h1>ITIS-3155-091 - Miguel</h1>
         </header>
@@ -97,7 +106,8 @@
             <img src="images/button-validation-css.png" width="131" height="45" alt="Validate webpage CSS."
                 class="center" />
         </a>
-        Copyright <a href="hernandezsyndicate/index.html">Hernandez Syndicate</a> 2023 - All Rights Reserved
+        Copyright <a href="hernandezsyndicate/index.html">Hernandez Syndicate</a> 2023 - All Rights Reserved,
+        <a href="https://www.freecodecamp.org/certification/mherna61/javascript-algorithms-and-data-structures">Certified in JS</a>
     </footer>
 
     <!-- HTML Include function call & jQuery console log write -->
