--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -21,6 +21,7 @@
         <header>
             <nav>
                 Home |
+                <a href="introduction.html">Introduction</a> |
                 <a href="tables.html">HTML Tables</a> |
                 <a href="forms.html">HTML Forms</a> |
                 <a href="contract.html">Contract</a> |
@@ -32,75 +33,31 @@
                 <a href="arrays.html">Arrays</a> |
                 <a href="slideshow.html">Slideshow</a>
             </nav>
+            <hr class="hr">
             <nav>
                 <a href="stuff/iRonsid3 gඞmEs.htm">CRAPPY Webpage</a> |
-                <a href="Accessibility/hernandez-activity_accessibility.html">Accessibility</a>
+                <a href="Accessibility/hernandez-activity_accessibility.html">Accessibility</a> |
+                <a href="midterm/hobby.html">Hobby</a> |
+                <a href="Activity11/Hernandez-Activity11.html">Accordion</a> |
+                <a href="Activity12/Hernandez-Activity12.html">Carousel Application</a> |
+                <a href="Activity13/Hernandez-Activity13.html">XML to JSON</a> |
+                <a href="Activity14/Hernandez-Activity14.html">Load Speaker Data</a> |
+                <a href="Activity15/Hernandez-Activity15.html">Expanded JSON File</a>
+                
             </nav>
         </header>
-    <main>
-        <h1>Miguel Hernandez's Magic Horse</h1>
-        <h2>Welcome to my ITIS3135 Site</h2>
+        <main>
+            <h1>Miguel Hernandez's Magic Horse</h1>
+            <h2>Welcome to my ITIS3135 Site</h2>
     </div>
-        <div class="home">
-            <figure>
-                <img src="images/komi-small.jpg" width="378" height="504" alt="Komi" class="center">
-                <figcaption><em>My leopard gecko</em></figcaption>
-            </figure>
+    <div class="home">
+        <figure>
+            <img src="images/hslogo.png" width="508" height="512" alt="hslogo" class="center">
+            <figcaption><em>Hernandez Syndicate logo</em></figcaption>
+        </figure>
 
-            <div class="goob1">
-                <div class="goob2">
-                    <p><strong>Personal Background</strong> <br> Born in Falkville, Alabama. Moved to North Carolina and
-                        have
-                        been here most of my life. I love video games, sports, and animals. I'm a comp sci major here at
-                        UNC
-                        Charlotte. I also like to hike whenever I have the opportunity.</p>
-                </div>
-                <div class="goob2">
-                    <p><strong>Professional Background</strong> <br> I've worked in a few places such as a grill
-                        restaurant,
-                        hispanic bakery, home improvement store, and a university office assistant.</p>
-                </div>
-                <div class="goob2">
-                    <p><strong>Academic Background</strong> <br>I went to Cooleemee Elementary School, South Davie
-                        Middle
-                        School, Davie County Early College High School, UNC Asheville, and currently going to UNC
-                        Charlotte.</p>
-                </div>
-                <div class="goob2">
-                    <p><strong>Background in this Subject</strong> <br> I learned very basic HTML when I lived in
-                        Asheville for
-                        a short period of time. It has been a minute though. I do however have experience with computers
-                        and a few
-                        programming languages. I do hope to learn more about this expansive field and increase my
-                        knowledge.</p>
-                </div>
-            </div>
-
-            <div class="goob1">
-                <div class="goob2">
-                    <p><strong>Primary Computer Platform</strong> <br> I currently have a potato laptop for on the go.
-                        In my
-                        apartment however I have my beautiful custom PC waiting for me.</p>
-                </div>
-                <div class="goob2">
-                    <p><strong>Courses I'm Taking & Why</strong> <br>
-                    <ul>
-                        <li><span>ITIS 3135 - Required</span></li>
-                        <li>STAT 1220 - Required</li>
-                        <li>MATH 2175 - Required</li>
-                        <li>ITIS 3200 - Required</li>
-                    </ul>
-                    </p>
-                </div>
-                <div class="goob2">
-                    <p><strong>Funny/Interesting Item to Remember me by</strong> <br> I can draw very well. I also have
-                        a leopard gecko.</p>
-                </div>
-                <div class="goob2">
-                    <p><strong>I'd also like to Share</strong> <br> ඞ</p>
-                </div>
-            </div>
-        </div>
+        <h3>Welcome to my home page! Keep an eye out for future projects constanting being added.</h3>
+    </div>
     </main>
     <footer>
         <a href="https://validator.w3.org/check?uri=referer" target="_blank">
@@ -112,7 +69,8 @@
             <img src="images/button-validation-css.png" width="131" height="45" alt="Validate webpage CSS."
                 class="center" />
         </a>
-        Copyright <a href="hernandezsyndicate/index.html">Hernandez Syndicate</a> 2023 - All Rights Reserved
+        Copyright <a href="hernandezsyndicate/index.html">Hernandez Syndicate</a> 2023 - All Rights Reserved,
+        <a href="https://www.freecodecamp.org/certification/mherna61/javascript-algorithms-and-data-structures">Certified in JS</a>
     </footer>
 </body>
 
