--- a/itis3135/Accessibility/hernandez-activity_accessibility.html
+++ b/itis3135/Accessibility/hernandez-activity_accessibility.html
@@ -18,6 +18,7 @@
     <h1>Candle Delight</h1>
     <nav>
       <a href="../index.html">Home</a> |
+      <a href="introduction.html">Introduction</a> |
       <a href="../tables.html">HTML Tables</a> |
       <a href="../forms.html">HTML Forms</a> |
       <a href="../contract.html">Contract</a> |
@@ -32,7 +33,11 @@
     </nav>
     <nav>
       <a href="../stuff/iRonsid3 gඞmEs.htm">CRAPPY Webpage</a> |
-      Accessibility
+      Accessibility |
+      <a href="midterm/hobby.html">Hobby</a> |
+      <a href="../Activity11/Hernandez-Activity11.html">Accordion</a> |
+      <a href="../Activity12/Hernandez-Activity12.html">Carousel Application</a>
+
     </nav>
   </header>
   <main>
