--- a/itis3135/contract.html
+++ b/itis3135/contract.html
@@ -41,7 +41,8 @@
                 <a href="Activity12/Hernandez-Activity12.html">Carousel Application</a> |
                 <a href="Activity13/Hernandez-Activity13.html">XML to JSON</a> |
                 <a href="Activity14/Hernandez-Activity14.html">Load Speaker Data</a> |
-                <a href="Activity15/Hernandez-Activity15.html">Expanded JSON File</a>
+                <a href="Activity15/Hernandez-Activity15.html">Expanded JSON File</a> |
+                <a href="clientproject/index.html">Client Project</a>
                 
             </nav>
             <h1>ITIS-3155-091 - Miguel</h1>
